--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.loopeer.android.thirdparty.pulltorefresh:Android-PullToRefresh:2.1.1'
     compile 'com.github.feeeei:CircleSeekbar:v1.0.3'
-    compile 'com.google.code.gson:gson-parent:2.6.2'
     compile 'com.squareup.okhttp:okhttp:2.7.5'
+    compile 'com.google.code.gson:gson:2.6.2'
 }
